# ft_transcendence

./: .dockerignore  .env.example  .gitignore  .lintstagedrc  .set_host_ip_address  Dockerfile  Makefile  README.md  a  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  shell.nix
.husky/: commit-msg  pre-commit
assets/: flame.json
assets/skins/: convert_image.sh
backend/: .env.example  .nfs0000000014c2047900000136  manage.py
backend/bonk/: admin.py  api.py  asgi.py  auth.py  consumers.py  ftapi.py  models.py  routing.py  settings.py  urls.py  wsgi.py
backend/bonk-server/: export_presets.cfg  global.gd  instance.gd  main.gd  main.tscn  parameters.gd  project.godot  settings.gd
backend/pong-server/: Cargo.toml  Makefile
backend/pong-server/src/: input.rs  main.rs
backend/ponk/: admin.py  api.py  api_decorators.py  asgi.py  auth.py  bonk.py  chat.py  debug.py  end.py  friends.py  ftapi.py  models.py  money.py  ping.py  private.py  settings.py  skins.json  tasks.py  tournament.py  urls.py  utils.py  wsgi.py
caddy/: Caddyfile  Dockerfile
docker/: bonk-server  pong-server  transcendence
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js  webpack.config.js
frontend/bonk-client/: bonk-client.audio.worklet.js  bonk-client.html  bonk-client.js  bonk-client.worker.js  pako_inflate.min.js  status.js
frontend/pong-client/: Cargo.toml  LICENSE_MIT  index.html  index.js  package-lock.json  webpack.config.js
frontend/pong-client/src/: game.rs  lib.rs  render.rs
frontend/src/: Contexts.js  index.css  index.jsx  style.css
pong/: .gitignore  Cargo.toml  pong.tscn  project.godot
pong/.import/: ball.png-39e1104a2ffc4901f03ad695386008e9.md5  ball.png-39e1104a2ffc4901f03ad695386008e9.stex  (+5 more)
pong/pong-server/: Cargo.toml
pong/pong-server/src/: input.rs  main.rs
pong/src/: main.rs
skins/: convert_image.sh
startup.d/: 01-private_api_token  02-source_env  03-env  04-init_db  05-pnpm  06-venv  07-auto_migrate  08-caddy  09-debug  10-frontend_static_build  11-husky  12-bonk  12-tmux  13-django  14-tmux  15-stop
(+139 files in other folders)
