[package]
name = "pong-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
futures = "0.3.30"
glam = { version = "0.27.0", features = ["serde"] }
mint = { version = "0.5.9", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["fast-rng", "v4"] }
