[package]
name = "pong-client"
version = "0.1.0"
authors = ["vcornill"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
glam = { version = "0.27.0", features = ["serde"] }
js-sys = "0.3.69"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
uuid = { version = "1.8.0", features = ["js", "v4"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "*"
serde-wasm-bindgen = "0.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'WebGlTexture',
  'ReadableStream',
  'Response',
  'HtmlImageElement',
  'WebGlUniformLocation',
  'Location',
  'Crypto',
  'CssStyleDeclaration',
  'MouseEvent',
  'HtmlButtonElement',
  'HtmlElement',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "EventListener",
  "EventTarget",
  "KeyboardEvent"
]


[profile.release]
opt-level = "s"
